# House_Price_Prediction

./: .env.example  .gitignore  COMPLETION_STATUS.md  DATA_ACCURACY_FIXES.md  FINAL_DEPLOYMENT_CHECKLIST.md  House_Price_Prediction_Presentation.pptx  Makefile  NATIONWIDE_EXPANSION_NOTES.md  NATIONWIDE_LIVE_TEST_RESULTS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_2026-05-10.md  PRODUCTION_READINESS_LOCKED.md  QUICK_REFERENCE.md  README.md  RENTCAST_SETUP.md  TRAINING_SESSION_SUMMARY.md  alembic.ini  api_simple.py  dashboard.py  pyproject.toml  render.yaml  requirements.txt  run built_training_pipeline.py.txt
.streamlit/: config.toml
alembic/: env.py  script.py.mako
docs/: backend-service-plan.md  openapi.json
notebooks/: explore_data.ipynb
scripts/: _make_pptx.py  _write_ensemble.py  analyze_outliers.py  analyze_test_errors.py  bootstrap_training_data.py  build_training_pipeline.py  export_openapi.py  ingest_csv_training_data.py  live_random_validation_test.py  live_validation_test.py  model_utils.py  seed_live_predictions.py  seed_national_neighborhood_scorer.py  smoke_api.py  start_production.sh  test_advanced_analysis.py  test_ensemble_model.py  test_nationwide_model.py  test_nationwide_model_routed.py  test_real_addresses.py  test_three_tier_system.py  train.py  train_ensemble_model.py  train_from_splits.py  train_luxury_model.py  train_mid_price_model_v2.py  train_nationwide_model.py  train_nationwide_model_improved.py  train_smart_router.py
tests/: test_address_pipeline.py  test_api_backend.py  test_census_property_data_client.py  (+3 more)
(+68 files in other folders)
